adding change to html page

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
         <div class="wrapper">
             <div>
 
-            <p>Powered by <a href="https://botkit.ai/">Botkit</a></p>
+            <p>Code reviewBot</p>
+              <img src = "http://i.imgur.com/twBt8kg.png"> 
             </div>
         </div>
     </body>
