--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title> Bot</title>
+        <title> D4AVID </title>
         <link rel="stylesheet" href="/styles.css" />
 
     </head>
@@ -9,7 +9,7 @@
         <div class="wrapper">
             <div>
 
-            <p>Code reviewBot</p>
+            <p>D4AVID</p>
               <img src = "http://i.imgur.com/twBt8kg.png"> 
             </div>
         </div>
