--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
             <div>
 
             <p>D4VID</p>
-              <img src = "http://i.imgur.com/twBt8kg.png"> 
+              <img src = "http://i.imgur.com/AEzPEAW.png"> 
             </div>
         </div>
     </body>
